Fix whitespace of listings with numbers (fixes #155)

--- a/v7/hyde/assets/css/poole.css
+++ b/v7/hyde/assets/css/poole.css
@@ -471,3 +471,13 @@ a.pagination-item:hover {
     border-bottom-right-radius: 4px;
   }
 }
+
+
+/* Fix whitespace of listings w/ numbers (issue #155) */
+table.codehilitetable pre {
+  padding: 0;
+}
+td.code /* to exclude listings w/o numbers */
+pre.code.literal-block {
+  margin-left: 0;
+}
